# msp-toolkit

./: .env.example  .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  IMPROVEMENT_PLAN.md  INSTALL.md  ISSUES_FOUND.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  api_reference.md  getting-started.md  getting_started.md  index.md
examples/: README.md  basic_usage.py  health_monitoring_workflow.py
mcp_server/: README.md  __init__.py  server.py  tools.py
src/msp_toolkit/: __init__.py  cli.py
src/msp_toolkit/core/: __init__.py  client_manager.py  device_manager.py  exceptions.py  health_monitor.py  models.py  report_generator.py  toolkit.py
src/msp_toolkit/integrations/: __init__.py
src/msp_toolkit/integrations/rmm/: __init__.py  base.py  local.py
src/msp_toolkit/storage/: db.py  models.py
src/msp_toolkit/utils/: __init__.py  config.py  logger.py  security.py  system.py
templates/reports/: health-report.html
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_cli.py  test_client_manager.py  test_config.py  test_device_manager.py  test_health_monitor.py
