[tool.poetry]
name = "msp-toolkit"
version = "0.1.0"
description = "Automation toolkit for Managed Service Providers with AI integration via MCP"
authors = ["AIQSO <https://aiqso.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qvidal01/msp-toolkit"
repository = "https://github.com/qvidal01/msp-toolkit"
keywords = ["msp", "automation", "rmm", "monitoring", "mcp", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
packages = [{include = "msp_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
httpx = "^0.25"
jinja2 = "^3.1"
schedule = "^1.2"
cryptography = "^41.0"
pyyaml = "^6.0"
click = "^8.1"
rich = "^13.7"
sqlalchemy = "^2.0"
python-dotenv = "^1.0"
requests = "^2.31"
mcp = "^0.9"
structlog = "^24.1"
keyring = "^24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
black = "^23.11"
ruff = "^0.1"
mypy = "^1.7"
pre-commit = "^3.5"
types-pyyaml = "^6.0"
types-requests = "^2.31"

[tool.poetry.scripts]
msp-toolkit = "msp_toolkit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src/msp_toolkit --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
